refac: ajuste no fluxo de agente